# mini-cmake-qt

./: CMakeLists.txt  README  README.md  example.qrc
cmake/: QtCommon.cmake  windows_metafile.rc.in
res/: windows_metafile.rc.in
src/: main.cc  mainwindow.cc  mainwindow.cpp  mainwindow.h
ui/: mainwindow.ui
win/: example.rc
